# cce-fhir-gen

./: CHANGELOG.md  Cargo.toml  LICENSE  NOTES.md  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
docs/: Features.org  Notes.org
examples/: 1-patient.xml  2-specimen.xml  3-condition.xml  4-observation-histology.xml  5-observation-vitalstatus.xml  6-observation-tnmc.xml  7-procedure-operation.xml  7-procedure-radiotherapy.xml  8-medicationstatement.xml  8-procedure-radiotherapy.xml  9-medicationstatement.xml  bundle-original.xml  bundle.xml
examples/multiple-resources-per-bundle/: 100-conditions.xml  100-patients.xml  100-specimen.xml
src/: bundle_svc.rs  condition_svc.rs  data_gen_svc.rs  main.rs  medication_svc.rs  observation_svc.rs  patient_svc.rs  procedure_svc.rs  showcase.rs  specimen_svc.rs  utils.rs
src/cli/: args.rs
src/extensions/: mod.rs  option_ext.rs  option_str_ext.rs  result_ext.rs  str_ext.rs
src/fhir/: globals.rs  mod.rs  traits.rs  vital_status_code_system.rs
src/lens/: mod.rs
src/models/: cli.rs  lookup.rs  mod.rs  traits.rs
src/models/converters/: mod.rs  observation_converter.rs  patient_converter.rs  specimen_converter.rs
src/models/enums/: gender.rs  id_type.rs  loinc_codes.rs  mod.rs  sample_material_type.rs  syst_therapy_type.rs  tnmm_category.rs  tnmn_category.rs  tnmr_symbol.rs  tnmt_category.rs  tnmy_symbol.rs  tumor_site_location.rs  uicc_stage.rs  vital_status.rs
src/models/lens/: catalogue.rs  condition.rs  criteria.rs  enums.rs  language.rs  mod.rs  operation.rs  ranges.rs  traits.rs
