[package]
name = "cce-fhir-gen"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.34", features = ["derive"] }
colog = "1.3.0"
fake = { version = "4.3.0", features = ["derive", "chrono"] }
fhirbolt = { version = "0.4", features = ["r4b"] }
log = "0.4.27"
quick-xml = { version = "0.38.0", features = ["serialize"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
yaserde = { version = "0.12.0", features = ["derive"] }
