[package]
name = "cce-fhir-gen"
version = "0.3.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.45", features = ["derive"] }
colog = "1.3.0"
fake = { version = "4.4.0", features = ["derive", "chrono"] }
fhirbolt = { version = "0.4", features = ["r4b"] }
log = "0.4.27"
quick-xml = { version = "0.38.2", features = ["serialize"] }
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
yaserde = { version = "0.12.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
